PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <description>사원이 사용하는 HW 및 SW 자산을 관리</description>
    <label>자산</label>
    <nameField>
        <displayFormat>AST{0000000}</displayFormat>
        <label>자산번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>