PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/ComputerName__c.field-meta.xml
<CustomField>
    <fullName>ComputerName__c</fullName>
    <label>*컴퓨터명</label>
    <length>40</length>
    <type>Text</type>
</CustomField>