PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <label>CPU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>