PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/DateOfManufacture__c.field-meta.xml
<CustomField>
    <fullName>DateOfManufacture__c</fullName>
    <label>제조일자</label>
    <type>Date</type>
</CustomField>