PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/DiscardedDate__c.field-meta.xml
<CustomField>
    <fullName>DiscardedDate__c</fullName>
    <label>폐기일</label>
    <type>Date</type>
</CustomField>