PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/Disk__c.field-meta.xml
<CustomField>
    <fullName>Disk__c</fullName>
    <label>디스크(GB)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>