PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사용자</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>자산</relationshipLabel>
    <relationshipName>Asset_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>