PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/fm_UserIsActive__c.field-meta.xml
<CustomField>
    <fullName>fm_UserIsActive__c</fullName>
    <formula>EmployeeID__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사용자활성화여부</label>
    <type>Checkbox</type>
</CustomField>