PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>비고</label>
    <type>TextArea</type>
</CustomField>