PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <label>메모리(GB)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>