PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>모델명</label>
    <length>60</length>
    <type>Text</type>
</CustomField>