PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <label>OS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>