PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <label>구입일자</label>
    <type>Date</type>
</CustomField>