PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/SN__c.field-meta.xml
<CustomField>
    <fullName>SN__c</fullName>
    <inlineHelpText>Unique 값입니다.</inlineHelpText>
    <label>S/N</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>