PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <label>유형(대)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H/W</fullName>
            </value>
            <value>
                <fullName>S/W</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>