PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <label>유형(소)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>노트북</fullName>
            </value>
            <value>
                <fullName>모니터</fullName>
            </value>
            <value>
                <fullName>MS Office</fullName>
            </value>
            <value>
                <fullName>IntelliJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>