PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>제조사</label>
    <length>40</length>
    <type>Text</type>
</CustomField>