PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/fields/WindowsKey__c.field-meta.xml
<CustomField>
    <fullName>WindowsKey__c</fullName>
    <label>WindowsKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>