PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type1__c</columns>
    <columns>Type2__c</columns>
    <columns>Vendor__c</columns>
    <columns>Model__c</columns>
    <columns>EmployeeID__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>