PA_Education/TestMenifest/force-app/main/default/objects/Asset__c/listViews/AssetList_NotUsed.listView-meta.xml
<ListView>
    <fullName>AssetList_NotUsed</fullName>
    <columns>NAME</columns>
    <columns>Type1__c</columns>
    <columns>Type2__c</columns>
    <columns>Vendor__c</columns>
    <columns>Model__c</columns>
    <columns>EmployeeID__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EmployeeID__c</field>
        <operation>equals</operation>
    </filters>
    <label>사용자가 없는 자산</label>
</ListView>